# LLM

./: pyproject.toml
local_server/: README.md  app.py
local_server/static/: script.js  style.css
local_server/templates/: index.html
