[tool.poetry]
name = "llm"
version = "0.1.0"
description = ""
authors = ["Tobias Fankhauser <tobias7402@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.0"
accelerate = "^0.27.2"
bitsandbytes = "^0.42.0"
flask = "^3.0.2"
transformers = "^4.37.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
